Fix department button size on mobile

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -71,6 +71,8 @@
         box-shadow: rgba(0,0,0,0.1) 0px 1px 3px;
         display: inline-block;
         text-align: center;
+        width: 100%;
+        
         
         transition: 0.3s ease-in all;
 
